--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>au.edu.anu.delibdem</groupId>
 	<artifactId>advance-q</artifactId>
 	<name>${project.artifactId}</name>
-	<version>2.0.7</version>
+	<version>2.0.8-SNAPSHOT</version>
 	<description>For Q-Methodology research</description>
 	<prerequisites>
 		<maven>3.0.1</maven>
