--- a/pom.xml
+++ b/pom.xml
@@ -210,4 +210,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>googlecode-moten-util</id>
+			<url>http://moten-util.googlecode.com/svn/repo</url>
+		</repository>
+	</repositories>
 </project>
