decompile moten-util-old into current source tree and add synchronization to source tree

--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
 			<artifactId>gif4j-light-trial</artifactId>
 			<version>1.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.moten.david</groupId>
-			<artifactId>moten-util-old</artifactId>
-			<version>1.0.0</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.moten.david</groupId> -->
+<!-- 			<artifactId>moten-util-old</artifactId> -->
+<!-- 			<version>1.0.0</version> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
