--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>au.edu.anu.delibdem</groupId>
-	<artifactId>advance-q</artifactId>
+	<artifactId>deliberate-q</artifactId>
 	<name>${project.artifactId}</name>
 	<version>2.0.8</version>
 	<description>For Q-Methodology research</description>
