update pom.xml with SNAPSHOT version, change licence to Apache 2.0, add pom metadata

--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <groupId>au.edu.anu.delibdem</groupId>
     <artifactId>deliberate-q</artifactId>
     <name>${project.artifactId}</name>
-    <version>2.0.8</version>
-    <description>For Q-Methodology research</description>
+    <version>2.0.9-SNAPSHOT</version>
+    <description>Tool to apply Q-Methodology</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <compiler.source.version>1.8</compiler.source.version>
@@ -23,18 +23,46 @@
 
     <licenses>
         <license>
-            <name>GNU General Public License (GPL) version 2.0</name>
-            <url>http://www.gnu.org/licenses/gpl-2.0.html</url>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
         </license>
     </licenses>
 
+    <ciManagement>
+        <system>Travis</system>
+        <url>https://travis-ci.org/DeliberativeAnalysis/DeliberateQ</url>
+    </ciManagement>
+    
+    <issueManagement>
+        <system>GitHub</system>
+        <url>https://github.com/DeliberativeAnalysis/DeliberateQ/issues</url>
+    </issueManagement>
+
+    <inceptionYear>2008</inceptionYear>
+    <developers>
+        <developer>
+            <id>dave</id>
+            <name>Dave Moten</name>
+            <url>https://github.com/davidmoten/</url>
+            <roles>
+                <role>architect</role>
+                <role>developer</role>
+            </roles>
+            <timezone>+10</timezone>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:https://github.com/DeliberativeAnalysis/DeliberateQ.git</connection>
+        <developerConnection>scm:git:https://github.com/DeliberativeAnalysis/DeliberateQ.git</developerConnection>
+        <url>scm:git:https://github.com:DeliberativeAnalysis/DeliberateQ.git</url>
+        <tag>HEAD</tag>
+    </scm>
+
+
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-math3</artifactId>
@@ -54,6 +82,14 @@
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
             <version>4.2.0</version>
+        </dependency>
+        
+        <!--  test dependencies -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
