remove StringOutputStream, pom whitespace

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>au.edu.anu.delibdem</groupId>
+    <groupId>com.github.deliberativeanalysis</groupId>
     <artifactId>deliberate-q</artifactId>
     <name>${project.artifactId}</name>
     <version>2.0.9-SNAPSHOT</version>
@@ -61,7 +61,6 @@
         <tag>HEAD</tag>
     </scm>
 
-
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -100,7 +99,6 @@
                 <version>1.6.0</version>
                 <executions>
                     <execution>
-                        <!-- <phase>assembly</phase> -->
                         <goals>
                             <goal>java</goal>
                         </goals>
